--- a/docker/collector/otel-collector.yml
+++ b/docker/collector/otel-collector.yml
@@ -5,8 +5,7 @@ receivers:
       grpc:
 
 processors:
-  # batch metrics before sending to reduce API usage
-  batch:
+  batch:  # Batch processor để gom nhóm metrics trước khi gửi đi
 
 exporters:
   logging:
@@ -16,32 +15,28 @@ exporters:
     const_labels:
       label1: spring
   otlp:
-    endpoint: tempo:4317  # tempo container host and port
+    endpoint: tempo:4317  # Tempo container host và port
     tls:
       insecure: true
   loki:
     endpoint: "http://loki:3100/loki/api/v1/push"
 
 extensions:
-  # responsible for responding to health check calls on behalf of the collector.
   health_check:
-  # fetches the collector’s performance data
   pprof:
-  # serves as an http endpoint that provides live debugging data about instrumented components.
   zpages:
 
 service:
   extensions: [health_check, pprof, zpages]
   pipelines:
-    # for now we only interested about metrics...
     metrics:
       receivers: [otlp]
       processors: [batch]
-      exporters: [prometheus]
+      exporters: [prometheus]  # Metrics sẽ được xuất qua Prometheus
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [otlp]  # name here should match the exporter name for tempo which is otlp
+      exporters: [otlp]  # Traces sẽ được xuất qua OTLP tới Tempo
     logs:
       receivers: [otlp]
-      exporters: [loki,logging]
+      exporters: [loki, logging]  # Logs sẽ được xuất tới Loki và log
