--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,12 @@
             <artifactId>modelmapper</artifactId>
             <version>2.3.9</version>
         </dependency>
+        <dependency>
+            <groupId>com</groupId>
+            <artifactId>modulith-hexagonal-ddd-sample</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
@@ -218,6 +224,16 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <spring.profiles.active>test</spring.profiles.active>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
         </plugins>
